close button is not working

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="script.js" defer></script>
+  
 </head>
 <body>
 
  <div class="container">
   <div class="model-content">
    <h1>Model Content</h1>
-   <div class="model-focus">
+   <div class="open-model">
     <i class="fa-solid fa-xmark"></i>
    </div>
   </div>
  </div>
- 
+<script src="script.js" defer></script>
 </body>
 </html>
